Bug Fix: Input to confirm was hidden on mobile

--- a/users/control/style.css
+++ b/users/control/style.css
@@ -411,7 +411,6 @@ summary{
 #confpopup {
     margin: auto;
     width: 450px;
-    height: 205px;
     background-color: white;
     border-radius: 6px;
     color: black;
